--- a/javaAPI/test-output/old/Suite/methods.html
+++ b/javaAPI/test-output/old/Suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e68d0">  <td>22/11/10 09:06:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirsAPITest.beforeMethod()[pri:0, instance:com.unosquare.FirsAPITest@367ffa75]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
-<tr bgcolor="9e68d0">  <td>22/11/10 09:06:50</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirsAPITest.f()[pri:0, instance:com.unosquare.FirsAPITest@367ffa75]">f</td> 
-  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="dd9eb7">  <td>22/11/10 17:36:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.testFirsGetUsingHTTPObjects()[pri:0, instance:com.unosquare.FirstAPIGetTest@3c9754d8]">testFirsGetUsingHTTPObjects</td> 
+  <td>main@1595282218</td>   <td></td> </tr>
 </table>
