--- a/javaAPI/test-output/index.html
+++ b/javaAPI/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,6 +102,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.unosquare.FirstAPIGetTest" class="method navigator-link" hash-for-method="f_post_Gherking">f_post_Gherking</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.unosquare.FirstAPIGetTest" class="method navigator-link" hash-for-method="testFirsGetUsingHTTPObjects">testFirsGetUsingHTTPObjects</a> <!-- method navigator-link -->
@@ -125,6 +130,13 @@
               <span class="class-name">com.unosquare.FirstAPIGetTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="f_post_Gherking">
+                  </a> <!-- f_post_Gherking -->
+                  <span class="method-name">f_post_Gherking</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="testFirsGetUsingHTTPObjects">
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testFirsGetUsingHTTPObjects')
+data.setCell(0, 1, 'f_post_Gherking')
 data.setCell(0, 2, 'com.unosquare.FirstAPIGetTest')
-data.setCell(0, 3, 5952);
+data.setCell(0, 3, 6004);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testFirsGetUsingHTTPObjects')
+data.setCell(1, 2, 'com.unosquare.FirstAPIGetTest')
+data.setCell(1, 3, 428);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -211,6 +227,12 @@ return data;
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Sucess 200 validation</span>
                 <span class="reporter-method-output">{"data":{"id":2,"email":"janet.weaver@reqres.in","first_name":"Janet","last_name":"Weaver","avatar":"https://reqres.in/img/faces/2-image.jpg"},"support":{"url":"https://reqres.in/#support-heading","text":"To keep ReqRes free, contributions towards server costs are appreciated!"}}</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">f_post_Gherking</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Sucess 201 validation</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,8 +252,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.unosquare.FirstAPIGetTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testFirsGetUsingHTTPObjects</span>
+                <span class="method-name">f_post_Gherking</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testFirsGetUsingHTTPObjects</span>
+                <span class="method-start">6008 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
