--- a/javaAPI/test-output/old/Suite/classes.html
+++ b/javaAPI/test-output/old/Suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>f_post_Gherking</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testFirsGetUsingHTTPObjects</td>
 <td>&nbsp;</td></tr>
 <tr>
