--- a/javaAPI/test-output/old/Suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dd9eb7">  <td>22/11/10 17:36:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.testFirsGetUsingHTTPObjects()[pri:0, instance:com.unosquare.FirstAPIGetTest@3c9754d8]">testFirsGetUsingHTTPObjects</td> 
-  <td>main@1595282218</td>   <td></td> </tr>
+<tr bgcolor="dd9eb7">  <td>22/11/11 17:20:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.f_post_Gherking()[pri:0, instance:com.unosquare.FirstAPIGetTest@3bf7ca37]">f_post_Gherking</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="dd9eb7">  <td>22/11/11 17:20:29</td>   <td>6010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.testFirsGetUsingHTTPObjects()[pri:0, instance:com.unosquare.FirstAPIGetTest@3bf7ca37]">testFirsGetUsingHTTPObjects</td> 
+  <td>main@324457684</td>   <td></td> </tr>
 </table>
