--- a/javaAPI/test-output/old/Suite/classes.html
+++ b/javaAPI/test-output/old/Suite/classes.html
@@ -11,11 +11,37 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f_post_Gherking</td>
+<td>testFirsGetUsingHTTPObjects</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testFirsGetUsingHTTPObjects</td>
+<td>f_Gherking_get</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.unosquare.SecondAPIGETTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>f_Gherking_get_list</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getUserRequest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
