--- a/javaAPI/test-output/old/Suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80d78a">  <td>22/11/11 17:51:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.f_Gherking_get()[pri:0, instance:com.unosquare.FirstAPIGetTest@b2c9a9c]">f_Gherking_get</td> 
-  <td>main@1248234350</td>   <td></td> </tr>
-<tr bgcolor="dd9eb7">  <td>22/11/11 17:51:52</td>   <td>-6306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondAPIGETTest.f_Gherking_get_list()[pri:0, instance:com.unosquare.SecondAPIGETTest@4b2bac3f]">f_Gherking_get_list</td> 
-  <td>main@1248234350</td>   <td></td> </tr>
-<tr bgcolor="dd9eb7">  <td>22/11/11 17:51:58</td>   <td>-785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondAPIGETTest.getUserRequest()[pri:0, instance:com.unosquare.SecondAPIGETTest@4b2bac3f]">getUserRequest</td> 
-  <td>main@1248234350</td>   <td></td> </tr>
-<tr bgcolor="80d78a">  <td>22/11/11 17:51:59</td>   <td>289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.testFirsGetUsingHTTPObjects()[pri:0, instance:com.unosquare.FirstAPIGetTest@b2c9a9c]">testFirsGetUsingHTTPObjects</td> 
-  <td>main@1248234350</td>   <td></td> </tr>
+<tr bgcolor="80d78a">  <td>22/11/14 10:15:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.f_Gherking_get()[pri:0, instance:com.unosquare.FirstAPIGetTest@3bd82cf5]">f_Gherking_get</td> 
+  <td>main@137460818</td>   <td></td> </tr>
+<tr bgcolor="dd9eb7">  <td>22/11/14 10:14:54</td>   <td>-6626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondAPIGETTest.f_Gherking_get_list()[pri:0, instance:com.unosquare.SecondAPIGETTest@26794848]">f_Gherking_get_list</td> 
+  <td>main@137460818</td>   <td></td> </tr>
+<tr bgcolor="dd9eb7">  <td>22/11/14 10:15:01</td>   <td>-378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondAPIGETTest.getUserRequest()[pri:0, instance:com.unosquare.SecondAPIGETTest@26794848]">getUserRequest</td> 
+  <td>main@137460818</td>   <td></td> </tr>
+<tr bgcolor="80d78a">  <td>22/11/14 10:15:01</td>   <td>372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIGetTest.testFirsGetUsingHTTPObjects()[pri:0, instance:com.unosquare.FirstAPIGetTest@3bd82cf5]">testFirsGetUsingHTTPObjects</td> 
+  <td>main@137460818</td>   <td></td> </tr>
+<tr bgcolor="756f9e">  <td>22/11/14 10:15:02</td>   <td>785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIPOST.testPostRequestGivenWhenThen()[pri:0, instance:com.unosquare.FirstAPIPOST@544fa968]">testPostRequestGivenWhenThen</td> 
+  <td>main@137460818</td>   <td></td> </tr>
+<tr bgcolor="756f9e">  <td>22/11/14 10:15:02</td>   <td>1353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstAPIPOST.testPostRequestHTMLObject()[pri:0, instance:com.unosquare.FirstAPIPOST@544fa968]">testPostRequestHTMLObject</td> 
+  <td>main@137460818</td>   <td></td> </tr>
 </table>
