Post create user from Json File

--- a/javaAPI/test-output/old/Default suite/classes.html
+++ b/javaAPI/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.unosquare.SecondAPIGETTest</td>
+<td>com.unosquare.PostUsingJsonObject</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f_Gherking_get_list</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getUserRequest</td>
+<td>testUsingJson</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
