--- a/javaAPI/test-output/old/Default suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bbcae">  <td>22/11/11 17:51:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondAPIGETTest.f_Gherking_get_list()[pri:0, instance:com.unosquare.SecondAPIGETTest@65f095f8]">f_Gherking_get_list</td> 
-  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>22/11/14 12:14:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostUsingJsonObject.testUsingJson()[pri:0, instance:com.unosquare.PostUsingJsonObject@2e55dd0c]">testUsingJson</td> 
+  <td>main@1374066265</td>   <td></td> </tr>
 </table>
