--- a/javaAPI/test-output/old/Suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a98a66">  <td>22/11/14 11:25:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostUsingJsonObject.testUsingJson()[pri:0, instance:com.unosquare.PostUsingJsonObject@55fe41ea]">testUsingJson</td> 
-  <td>main@532087022</td>   <td></td> </tr>
+<tr bgcolor="a98a66">  <td>22/11/14 15:02:40</td>   <td>0</td> <td title="&gt;&gt;PostRefactorizedUsingAPICore.before()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@75db5df9]">&gt;&gt;before</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@409962262</td>   <td></td> </tr>
+<tr bgcolor="a98a66">  <td>22/11/14 15:02:40</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRefactorizedUsingAPICore.testLogin()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@75db5df9]">testLogin</td> 
+  <td>main@409962262</td>   <td></td> </tr>
+<tr bgcolor="a98a66">  <td>22/11/14 15:02:44</td>   <td>3964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRefactorizedUsingAPICore.testPostWihtAPICore()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@75db5df9]">testPostWihtAPICore</td> 
+  <td>main@409962262</td>   <td></td> </tr>
 </table>
