--- a/javaAPI/test-output/old/Default suite/methods-alphabetical.html
+++ b/javaAPI/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2a091">  <td>22/11/14 15:22:31</td>   <td>0</td> <td title="&gt;&gt;PostRefactorizedUsingAPICore.before()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@101952da]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@424398527</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>22/11/14 15:22:31</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRefactorizedUsingAPICore.testLogin()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@101952da]">testLogin</td> 
-  <td>main@424398527</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>22/11/14 15:22:38</td>   <td>7519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRefactorizedUsingAPICore.testPostWihtAPICore()[pri:0, instance:com.unosquare.PostRefactorizedUsingAPICore@101952da]">testPostWihtAPICore</td> 
-  <td>main@424398527</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>22/11/14 16:55:37</td>   <td>0</td> <td title="&gt;&gt;FinalSuiteTest.before()[pri:0, instance:com.unosquare.FinalSuiteTest@3fb1549b]">&gt;&gt;before</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1678046232</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>22/11/14 16:55:37</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getResourceListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@3fb1549b]">getResourceListTest</td> 
+  <td>main@1678046232</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>22/11/14 16:55:44</td>   <td>6681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinalSuiteTest.getUserListTest()[pri:0, instance:com.unosquare.FinalSuiteTest@3fb1549b]">getUserListTest</td> 
+  <td>main@1678046232</td>   <td></td> </tr>
 </table>
